# psol

./: .gitignore  README.md  pyproject.toml
psol/: __init__.py  cli.py  console.py  idl.py  psol.py  utils.py
